complete Dashboard component

--- a/auth.html
+++ b/auth.html
@@ -13,7 +13,7 @@ Apply Bootstrap Form validation to ensure the correctness of user credentials. -
 <div class="container-fluid p-4">
             <h2 class="text-center mb-5">User Login Page</h2>
 <form class="needs-validation" novalidate>
-    <h3 class="text-center">Welcome Back!</h3>
+    <h3 class="text-center mb-5">Welcome Back!</h3>
 <div class=" row g-3 bg-dark text-info">
     <div class="col-md-6">
       <label for="username" class="form-label">Enter Username</label>
