--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,58 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+<div class="container-fluid">
+    <h2 class="text-center bg-dark text-info">Welcome to the Task Dashboard!</h2>
+    <!-- Cards -->
+   <div class="card-group p-4  text-center">
+
+    <div class="card text-bg-info mb-3 p-4" >
+      <div class="card-header">DashBoard</div>
+      <div class="card-body">
+        <h5 class="card-title">Tasks</h5>
+        <p class="card-text">Manage all of your tasks here...</p>
+      </div>
+      <div class="p-3 mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Add Task</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Task Title here">
+      </div>
+      <div class=" p-3 mb-3">
+        <label for="details" class="form-label">Enter Details</label>
+        <textarea class="form-control" id="details" rows="2"></textarea>
+      </div>
+
+     <div class="row">
+
+      <div class="col-md-6">
+        <label for="exampleFormControlInput1" class="form-label">Mark Task Completed</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Task Title here">
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="task-complete">
+            <label class="form-check-label" for="task-complete">
+              Task Completed
+            </label>
+          </div>
+      </div>
+
+          <div class=" col-md-6">
+            <label for="exampleFormControlInput1" class="form-label">Delete Task</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Task Title here">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="task-complete">
+                <label class="form-check-label" for="task-complete">
+                  Task Deleted
+                </label>
+              </div>
+          </div>
+    
+    </div>
+      
+
+    </div>
+
+    </div>
+
+</div>
     <!--Task Dashboard Page:
 Utilize Cards, Forms, and Buttons to create an interactive dashboard for managing tasks.-->
 
