--- a/dashboard.html
+++ b/dashboard.html
@@ -18,16 +18,20 @@
         <h5 class="card-title">Tasks</h5>
         <p class="card-text">Manage all of your tasks here...</p>
       </div>
-      <div class="p-3 mb-3">
+
+      <div class="row g-3">
+
+      <div class="col-sm-4">
         <label for="exampleFormControlInput1" class="form-label">Add Task</label>
         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Task Title here">
       </div>
-      <div class=" p-3 mb-3">
+      <div class="col-sm-4">
         <label for="details" class="form-label">Enter Details</label>
         <textarea class="form-control" id="details" rows="2"></textarea>
       </div>
+    </div>
 
-     <div class="row">
+     <div class="row g-3">
 
       <div class="col-md-6">
         <label for="exampleFormControlInput1" class="form-label">Mark Task Completed</label>
@@ -59,6 +63,89 @@
     </div>
 
 </div>
+
+<div class="container-fluid">
+
+<form class="row row-cols-lg-auto g-3 m-3 p-4 align-items-center">
+    <div class="col-12">
+      <label class="visually-hidden" for="inlineFormInputGroupUsername">Username</label>
+      <div class="input-group">
+       
+        <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Username">
+      </div>
+    </div>
+  
+    <div class="col-12">
+      <label class="visually-hidden" for="inlineFormSelectPref">Task Status</label>
+      <select class="form-select" id="inlineFormSelectPref">
+        <option selected>Choose...</option>
+        <option value="1"> Task One</option>
+        <option value="2">Task Two</option>
+        <option value="3">Task Three</option>
+      </select>
+    </div>
+  
+  
+    <div class="col-12">
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+  </form>
+
+
+<!-- Button trigger modal -->
+
+  <button type="button" class="btn btn-outline-primary position-relative" data-bs-toggle="modal" data-bs-target="#exampleModal">
+   Task Alerts
+    <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+      <span class="visually-hidden">Task alerts</span>
+    </span>
+  </button>
+
+
+  
+
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Task Manager</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Enter updates here...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="modal" id="modal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Modal body text goes here.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+ 
+
+  </div>
     <!--Task Dashboard Page:
 Utilize Cards, Forms, and Buttons to create an interactive dashboard for managing tasks.-->
 
