--- a/register.html
+++ b/register.html
@@ -11,7 +11,52 @@
 Create a registration form with Bootstrap Form components for new users to sign up.
 Apply Bootstrap Form validation to ensure the correctness of user-provided information.
 -->
+<div class="container-fluid p-4">
+    <h2 class="text-center mb-5">Create Account Page</h2>
+<form class="needs-validation" novalidate>
+<h3 class="text-center mb-5">Welcome!</h3>
+<div class=" row g-3 bg-dark text-info">
+<div class="col-md-6">
+<label for="username" class="form-label">Create Username</label>
+<input type="text" class="form-control" id="username" required>
+<div class="valid-feedback">Looks good enough for us!</div>
+<div class="invalid-feedback">Please enter Username.</div>
+</div>
+<div class="col-md-6">
+<label for="inputPassword4" class="form-label">Create Password</label>
+<input type="password" class="form-control" id="inputPassword4" required>
+<div class="valid-feedback">Looks good!</div>
+<div class="invalid-feedback">Please create password.</div>
+</div>
 
+
+<div class="col-12">
+<button type="submit" class="btn btn-outline-primary">Submit</button>
+</div>
+</div>
+</form>
+
+</div>
+<script>
+(() => {
+'use strict'
+
+// Fetch all the forms we want to apply custom Bootstrap validation styles to
+const forms = document.querySelectorAll('.needs-validation')
+
+// Loop over them and prevent submission
+Array.from(forms).forEach(form => {
+form.addEventListener('submit', event => {
+  if (!form.checkValidity()) {
+    event.preventDefault()
+    event.stopPropagation()
+  }
+
+  form.classList.add('was-validated')
+}, false)
+})
+})()
+</script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
