--- a/task_creation.html
+++ b/task_creation.html
@@ -13,7 +13,7 @@ Develop a form layout using Bootstrap Forms and Input Groups for adding new task
 -->
 <div class="container">
     <h1 class="text-center">Task Creation Form</h1>
-
+<div class="form-group">
 <div class="mb-3">
     <label for="exampleFormControlInput1" class="form-label">Enter Task Name</label>
     <input type="text" class="form-control" id="task-name" placeholder="Order Supplies...">
@@ -22,7 +22,7 @@ Develop a form layout using Bootstrap Forms and Input Groups for adding new task
     <label for="exampleFormControlTextarea1" class="form-label">Add Description</label>
     <textarea class="form-control" id="task-detail" rows="3"></textarea>
   </div>
-
+</div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
