--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@ and Cards to display key features.-->
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/dashboard.html">Dashboard</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/auth.html">Login</a>
           </li>
           <li class="nav-item">
